fixed project title alignment

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -4,6 +4,11 @@
     width: $content-wth;
     margin: 20rem auto 0 auto;
 
+    .section-title{
+        width: 82%;
+        margin: 0 auto;
+    }
+
     .projects-content{
         margin: 0 auto 6rem auto;
         width: 100%;
